fixed whitespace bugs and fixed (?) apple's rounded icons

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,8 +17,9 @@ li.no-bullets {
     margin: 0;
     padding: 0;
 }
-.fa-pencil {
+.fa-edit {
     -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 .inline {
